! Moviepilot changed API-error message, so instead of displaying the according error we had empty result sets
! rewrote movieposterdb::parse_list() -- so now the movie posters, logos, covers, etc. should work again
+ added imdb::orig_title() to retrieve the original movie title (if available; otherwise returns "")

v2.1.7 (15.05.2013)
-------------------
! site changes again. Fixed: imdb::keywords_all(), imdb::taglines(), imdb:quotes(), imdb::trailers()
! also due to site changes: fixed imdb::soundtrack() and extended it: soundtrack[i][credit] is now an array[credit_to,desc]
! fixed imdb::genres() returning duplicate genres due to some added SPANs
* some cleanup for the plot outline in imdb::plotoutline()
! fixed imdb::get_episode_details() broken due to site changes
! fixed imdb::comment_split() broken due to site changes
! fixed company credits (all four methods have been broken due to site changes)
* removed some garbage preceding the storyline returned by imdb::storyline()
+ imdbsearch::results() got additional parameters so results can be better filtered. Also added some safeguard for movies having a number before the year, e.g. "Safe (I) (2012)", to prevent empty years
! fixing imdb::mainPictures() bigsrc
! fixing minor issue with non-existing thumbnails in imdbphp::thumbphoto()

v2.1.6 (06.02.2012)
-------------------
! bunch of IMDB changes broke things again: fixed imdb::votes(), imdb::movietype(), imdb::country(), imdb::genres(), imdb::mpaa_reason()
! same reason: fixed imdb::thumbphoto() -- and thus all dependent photo methods resolve again
! same reason, more fixes: imdb::keywords()
! same reason, fixed imdb::seasons() -- which implicitly fixed the depending imdb::episodes()
! four more: fixed imdb::is_serial() and imdb::get_episode_details() plus imdb::comment() and imdb::comment_split() due to IMDB site changes

v2.1.5 (06.12.2012)
-------------------
! fixed "undefined index" error in imdb::episodes()